[package]
name = "redox_std"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "std"
path = "src/lib.rs"

[dependencies.ralloc]
path = "../ralloc/"
default-features = false
features = ["allocator"]

[dependencies.syscall]
path = "../syscall/"

[replace]
"libc:0.2.17" = { git = "https://github.com/redox-os/liblibc.git", branch = "new_kernel" }
