[package]
name = "redox_std"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "std"
path = "src/lib.rs"

[dependencies]
syscall = { git = "https://github.com/redox-os/syscall.git" }

[dependencies.ralloc]
git = "https://github.com/redox-os/ralloc.git"
default-features = false
features = ["allocator"]


[replace]
"libc:0.2.17" = { git = "https://github.com/redox-os/liblibc.git", branch = "new_kernel" }
